// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  background-color: #FFFFFF;
  border: 2px solid #0A169A;
  color: #0A169A;
  -webkit-transition: border linear;
  transition: border linear;
  color: #f75555;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 2px solid #999999;
  color: #999999;
  opacity: 0.5;
}

.c0:active {
  background-color: #F0F4F7;
  color: #38A9DB;
  outline: 2px solid #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  border: 3px solid #0A169A;
  background-color: #F0F4F7;
  color: #0A169A;
}

.c0::before {
  content: 'Cancel';
}

<button
  className="sc-fzplWN sc-fznKkj c0"
  disabled={true}
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  border: none;
  min-width: 100px;
  padding: 1rem 2rem;
  text-align: center;
  border-radius: 3px;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  background-color: #FFFFFF;
  border: 2px solid #0A169A;
  color: #0A169A;
  -webkit-transition: border linear;
  transition: border linear;
  color: #f75555;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:disabled {
  border: 2px solid #999999;
  color: #999999;
  opacity: 0.5;
}

.c0:active {
  background-color: #F0F4F7;
  color: #38A9DB;
  outline: 2px solid #38A9DB;
  box-shadow: 0 0 3px rgba(56,169,219,100);
}

.c0:hover:not(:disabled) {
  border: 3px solid #0A169A;
  background-color: #F0F4F7;
  color: #0A169A;
}

.c0::before {
  content: 'Cancel';
}

<button
  className="sc-fzplWN sc-fznKkj c0"
/>
`;
